<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/dimen_16x"
        android:layout_weight="1"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/trophy" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextInputLayoutIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Email"
        android:paddingLeft="@dimen/dimen_16x"
        android:paddingTop="@dimen/dimen_16x"
        android:paddingRight="@dimen/dimen_16x">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditTextViewIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_32x"
            android:layout_marginRight="@dimen/dimen_32x"
            android:layout_weight="0"
            android:gravity="center" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextInputViewIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:paddingLeft="@dimen/dimen_16x"
        android:paddingTop="@dimen/dimen_16x"
        android:paddingRight="@dimen/dimen_16x"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/light_grey">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditTextLayoutIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_32x"
            android:layout_marginRight="@dimen/dimen_32x"
            android:gravity="center"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_32x"
        android:layout_marginTop="@dimen/dimen_16x"
        android:layout_marginRight="@dimen/dimen_32x"
        android:gravity="center"
        android:padding="@dimen/dimen_16x"
        android:text="@string/forgot_password"
        android:textColor="@color/dark_grey"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_32x"
        android:layout_marginRight="@dimen/dimen_32x"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:paddingLeft="@dimen/dimen_32x"
        android:paddingRight="@dimen/dimen_32x"
        android:text="@string/login"
        android:textColor="@color/white"
        tools:layout_marginBottom="4dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/light_grey"
        />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/notamembersignup"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/not_a_member"
        android:textColor="@color/light_grey" />


</LinearLayout>