<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:padding="@dimen/dimen_16x"
        app:srcCompat="@drawable/trophy" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dimen_64x"
        android:paddingRight="@dimen/dimen_64x">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEditTextViewUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textColor="@color/dark_grey" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextInputLayoutIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dimen_64x"
        android:paddingRight="@dimen/dimen_64x">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditTextViewUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Email"
            android:textColor="@color/dark_grey" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dimen_64x"
        android:paddingRight="@dimen/dimen_64x"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/dark_grey">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditTextViewUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/dark_grey" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registerAppCompatButtonUp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_64x"
        android:layout_marginTop="@dimen/dimen_32x"
        android:layout_marginRight="@dimen/dimen_64x"
        android:layout_marginBottom="@dimen/dimen_16x"
        android:background="@color/colorPrimary"
        android:text="@string/signup" />
</LinearLayout>